variables.Variables.scala.error
Erreur de compilation :
Variables:10: error: value unary_! is not a member of Int
while(!dejaFait==nbPas) {
      ^