variables.Variables.scala.code
var nbPas=0
while(!estSurBiscuit) {
  avance()
  nbPas=nbPas+1
}

prendBiscuit()

var dejaFait=0
while(!dejaFait==nbPas) {
  recule()
  dejaFait=dejaFait+1
}

poseBiscuit()